--- a/scss/lib/select.scss
+++ b/scss/lib/select.scss
@@ -21,7 +21,7 @@
 .btn,
 .custom-file-control:before {
     font-size: 0.775rem;
-    text-transform: none !important;
+    /* text-transform: none !important; */
 }
 
 
