--- a/scss/lib/navbar.scss
+++ b/scss/lib/navbar.scss
@@ -23,7 +23,7 @@
 }
 
 .top-nav-collapse {
-    background-color: $ahimsa-color-verde;
+    background-color: $ahimsa-color-verde !important;
     transition: 0.5s ease-in;
 }
 
@@ -78,7 +78,7 @@
 }
 
 .navbar-ahimsa.scrolled .nav-item.active>a {
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
 }
 
 .navbar-ahimsa.scrolled .nav-link {
@@ -87,7 +87,7 @@
 
 .navbar-ahimsa.scrolled .nav-link.active,
 .navbar-ahimsa.scrolled .nav-link:hover {
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
 }
 
 .navbar-ahimsa.scrolled.awake {
@@ -112,7 +112,7 @@
 }
 
 .bg-ahimsa.scrolled {
-    background-color: $ahimsa-color-verde;
+    background-color: $ahimsa-color-verde !important;
     background-image: url('../../../img/patterns/xv.png') !important;
     background-image: url('../../../img/patterns/flowers.png') !important;
     -webkit-box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.5);
@@ -138,12 +138,12 @@
 /* Cambia el color de active or hovered links */
 
 .navbar .navbar-nav>.nav-item>a.active {
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
 }
 
 .navbar .nav-item.active .nav-link,
 .navbar .nav-item:hover .nav-link {
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
 }
 
 
@@ -182,7 +182,7 @@
 /* Cambia color del texto en dropdown */
 
 .navbar .navbar-nav .nav-item .dropdown-item {
-    color: $ahimsa-color-verde;
+    color: $ahimsa-color-verde !important;
 }
 
 
@@ -191,18 +191,18 @@
 .navbar .navbar-nav .nav-item .dropdown-item:focus,
 .navbar .navbar-nav .nav-item .dropdown-item:hover {
     box-sizing: border-box;
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
     background-color: transparent;
 }
 
 .navbar .navbar-nav .nav-item .dropdown-item:focus,
 .navbar .navbar-nav .nav-item .dropdown-item:hover {
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
 }
 
 .navbar .navbar-nav .nav-item .dropdown-item.active,
 .navbar .navbar-nav .nav-item .dropdown-item:active {
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
 }
 
 
@@ -243,7 +243,7 @@
 }
 
 .navbar.scrolled .navbar-toggler .icon-bar {
-    background-color: $ahimsa-color-amarillo;
+    background-color: $ahimsa-color-amarillo !important;
 }
 
 .navbar-toggler .icon-bar {
@@ -309,7 +309,7 @@
     font-family: $font-dancing;
     font-size: 1.8rem;
     /* color: #fff; */
-    color: $ahimsa-color-amarillo;
+    color: $ahimsa-color-amarillo !important;
     letter-spacing: 1.1px;
     -webkit-transition: 0.3s all ease-out;
     -o-transition: 0.3s all ease-out;
@@ -325,7 +325,7 @@
 }
 
 .navbar-ahimsa.scrolled .logo-ahimsa {
-    /* color: $ahimsa-color-amarillo; */
+    /* color: $ahimsa-color-amarillo !important; */
     color: #fff !important;
     -webkit-transition: 0.3s all ease-in;
     -o-transition: 0.3s all ease-in;
