--- a/scss/lib/utils.scss
+++ b/scss/lib/utils.scss
@@ -739,6 +739,17 @@ EFFECT   EFFECT   EFFECT   EFFECT   EFFECT   EFFECT  EFFECT
     height: auto;
 }
 
+.overlay .mask {
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+
+.overlay .mask:hover {
+    opacity: 1;
+}
+
 .rgba-black-slight,
 .rgba-black-slight:after {
     background-color: rgba(0, 0, 0, 0.1);
