--- a/scss/lib/variables.scss
+++ b/scss/lib/variables.scss
@@ -1,19 +1,63 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap');
-$ahimsa-color-verde: #008000 !important;
+$ahimsa-color-verde: #008000;
+$ahimsa-color-verde-light: #00c851;
+$ahimsa-color-verde-dark: #007e33;
+$ahimsa-color-gradient-verde: linear-gradient(60deg,
+#026802,
+#008000);
+$ahimsa-color-gradient-amarillo: linear-gradient(60deg,
+#dba70c,
+#ffc515);
 $ahimsa-color-verde-8: rgba(0,
 128,
 0,
-0.8) !important;
+0.8);
 $ahimsa-color-verde-6: rgba(0,
 128,
 0,
-0.6) !important;
+0.6);
 $ahimsa-color-verde-3: rgba(0,
 128,
 0,
-0.3) !important;
-$ahimsa-color-amarillo: #ffc515 !important;
+0.3);
+$ahimsa-color-verde-1: rgba(0,
+128,
+0,
+0.1);
+$ahimsa-color-verde-light-8: rgba(0,
+200,
+81,
+0.8);
+$ahimsa-color-verde-light-6: rgba(0,
+200,
+81,
+0.6);
+$ahimsa-color-verde-light-3: rgba(0,
+200,
+81,
+0.3);
+$ahimsa-color-verde-light-1: rgba(0,
+200,
+81,
+0.1);
+$ahimsa-color-verde-dark-8: rgba(0,
+126,
+51,
+0.8);
+$ahimsa-color-verde-dark-6: rgba(0,
+126,
+51,
+0.6);
+$ahimsa-color-verde-dark-3: rgba(0,
+126,
+51,
+0.3);
+$ahimsa-color-verde-dark-1: rgba(0,
+126,
+51,
+0.1);
+$ahimsa-color-amarillo: #ffc515;
 $font-roboto: 'Roboto',
 sans-serif;
 $font-dancing: 'Dancing Script',
