--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,9 @@
 @import 'lib/product-grid';
 @import 'lib/filter-search';
 @import 'lib/cards';
+@import 'lib/tables';
+@import 'lib/tooltip';
+@import 'lib/animaciones';
 
 /* .navbar .nav-link,
 .btn,
@@ -28,19 +31,34 @@
     text-transform: uppercase;
 } */
 
-.ahimsa-shadow-normal {
+.ahimsa-shadow-normal-2 {
     border: none;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
-.ahimsa-shadow-green {
+.ahimsa-shadow-normal {
+    border: none;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.ahimsa-shadow-green-2 {
     border: none;
     box-shadow: 0 2px 2px 0 rgba(0, 128, 0, 0.14), 0 3px 1px -2px rgba(0, 128, 0, 0.2), 0 1px 5px 0 rgba(0, 128, 0, 0.12);
 }
 
-.ahimsa-shadow-yellow {
+.ahimsa-shadow-green {
+    border: none;
+    box-shadow: 0 2px 5px 0 rgba(0, 128, 0, 0.16), 0 2px 10px 0 rgba(0, 128, 0, 0.12);
+}
+
+.ahimsa-shadow-yellow-2 {
     border: none;
     box-shadow: 0 2px 2px 0 rgba(255, 197, 21, 0.14), 0 3px 1px -2px rgba(255, 197, 21, 0.2), 0 1px 5px 0 rgba(255, 197, 21, 0.12);
+}
+
+.ahimsa-shadow-yellow {
+    border: none;
+    box-shadow: 0 2px 5px 0 rgba(255, 197, 21, 0.16), 0 2px 10px 0 rgba(255, 197, 21, 0.12);
 }
 
 .bg-ahimsa {
@@ -137,3 +155,311 @@ div.wpcf7 form.wpcf7-form div.boton-contacto {
 .grecaptcha-badge {
     visibility: hidden;
 }
+
+
+/* Pagination */
+
+.pagination {
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    border-radius: 0.25rem;
+}
+
+.page-link {
+    position: relative;
+    display: block;
+    padding: 0.5rem 0.75rem;
+    margin-left: -1px;
+    line-height: 1.25;
+    color: #007bff;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+}
+
+.page-link:hover {
+    z-index: 2;
+    color: #0056b3;
+    text-decoration: none;
+    background-color: #e9ecef;
+    border-color: #dee2e6;
+}
+
+.page-link:focus {
+    z-index: 2;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.page-item:first-child .page-link {
+    margin-left: 0;
+    border-top-left-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+}
+
+.page-item:last-child .page-link {
+    border-top-right-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+}
+
+.page-item.active .page-link {
+    z-index: 1;
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.page-item.disabled .page-link {
+    color: #6c757d;
+    pointer-events: none;
+    cursor: auto;
+    background-color: #fff;
+    border-color: #dee2e6;
+}
+
+.pagination-lg .page-link {
+    padding: 0.75rem 1.5rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+}
+
+.pagination-lg .page-item:first-child .page-link {
+    border-top-left-radius: 0.3rem;
+    border-bottom-left-radius: 0.3rem;
+}
+
+.pagination-lg .page-item:last-child .page-link {
+    border-top-right-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
+}
+
+.pagination-sm .page-link {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+}
+
+.pagination-sm .page-item:first-child .page-link {
+    border-top-left-radius: 0.2rem;
+    border-bottom-left-radius: 0.2rem;
+}
+
+.pagination-sm .page-item:last-child .page-link {
+    border-top-right-radius: 0.2rem;
+    border-bottom-right-radius: 0.2rem;
+}
+
+.pagination .page-item.active .page-link {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+    -webkit-border-radius: 0.125rem;
+    border-radius: 0.125rem;
+    background-color: #4285f4;
+    color: #fff;
+}
+
+.pagination .page-item.active .page-link:hover {
+    background-color: #4285f4;
+}
+
+.pagination .page-item.disabled .page-link {
+    color: #868e96;
+}
+
+.pagination .page-item .page-link {
+    -webkit-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+    font-size: 0.9rem;
+    color: #212529;
+}
+
+.pagination .page-item .page-link:hover {
+    -webkit-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+    -webkit-border-radius: 0.125rem;
+    border-radius: 0.125rem;
+    background-color: #eee;
+}
+
+.pagination .page-item .page-link:focus {
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.pagination.pagination-lg .page-item .page-link {
+    font-size: 1rem;
+}
+
+.pagination.pagination-sm .page-item .page-link {
+    font-size: 0.8rem;
+}
+
+.pagination.pagination-circle .page-item .page-link {
+    margin-left: 2px;
+    margin-right: 2px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.pagination.pagination-circle .page-item .page-link:hover {
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.pagination.pagination-circle .page-item.active .page-link {
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.pagination.pg-ahimsa-green .page-item.active .page-link {
+    /* background: $ahimsa-color-gradient-verde; */
+    background-color: #00c851 !important;
+}
+
+.pagination.pg-ahimsa-green .page-item.active .page-link:hover {
+    /* background: $ahimsa-color-gradient-verde; */
+    background-color: #007e33 !important;
+}
+
+.pagination.pg-blue .page-item.active .page-link {
+    background-color: #4285f4;
+}
+
+.pagination.pg-blue .page-item.active .page-link:hover {
+    background-color: #4285f4;
+}
+
+.pagination.pg-red .page-item.active .page-link {
+    background-color: #ff3547;
+}
+
+.pagination.pg-red .page-item.active .page-link:hover {
+    background-color: #ff3547;
+}
+
+.pagination.pg-teal .page-item.active .page-link {
+    background-color: #2bbbad;
+}
+
+.pagination.pg-teal .page-item.active .page-link:hover {
+    background-color: #2bbbad;
+}
+
+.pagination.pg-dark-grey .page-item.active .page-link {
+    background-color: #37474f;
+}
+
+.pagination.pg-dark-grey .page-item.active .page-link:hover {
+    background-color: #37474f;
+}
+
+.pagination.pg-dark .page-item.active .page-link {
+    background-color: #2e2e2e;
+}
+
+.pagination.pg-dark .page-item.active .page-link:hover {
+    background-color: #2e2e2e;
+}
+
+.pagination.pg-blue-grey .page-item.active .page-link {
+    background-color: #3f729b;
+}
+
+.pagination.pg-blue-grey .page-item.active .page-link:hover {
+    background-color: #3f729b;
+}
+
+.pagination.pg-amber .page-item.active .page-link {
+    background-color: #ff6f00;
+}
+
+.pagination.pg-amber .page-item.active .page-link:hover {
+    background-color: #ff6f00;
+}
+
+.pagination.pg-purple .page-item.active .page-link {
+    background-color: #5e35b1;
+}
+
+.pagination.pg-purple .page-item.active .page-link:hover {
+    background-color: #5e35b1;
+}
+
+
+/* Fin Pagination */
+
+
+/* Badge */
+
+.badge {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -webkit-border-radius: 0.125rem;
+    border-radius: 0.125rem;
+    color: #fff !important;
+}
+
+.badge-pill {
+    -webkit-border-radius: 10rem;
+    border-radius: 10rem;
+    padding-right: 0.6em;
+    padding-left: 0.6em;
+}
+
+.badge-primary {
+    background-color: #4285f4 !important;
+    color: #fff !important;
+}
+
+.badge-danger {
+    background-color: #ff3547 !important;
+    color: #fff !important;
+}
+
+.badge-warning {
+    background-color: #fb3 !important;
+    color: #fff !important;
+}
+
+.badge-success {
+    background-color: #00c851 !important;
+    color: #fff !important;
+}
+
+.badge-info {
+    background-color: #33b5e5 !important;
+    color: #fff !important;
+}
+
+.badge-default {
+    background-color: #2bbbad !important;
+    color: #fff !important;
+}
+
+.badge-secondary {
+    background-color: #a6c !important;
+    color: #fff !important;
+}
+
+.badge-dark {
+    background-color: #212121 !important;
+    color: #fff !important;
+}
+
+.badge-light {
+    background-color: #e0e0e0 !important;
+    color: #000 !important;
+}
+
+
+/* Fin Badge */
