--- a/scss/lib/footer.scss
+++ b/scss/lib/footer.scss
@@ -28,7 +28,7 @@ footer.page-footer .footer-copyright a:hover {
 }
 
 .page-footer.bg-ahimsa {
-    background-color: #008000 !important;
+    background-color: $ahimsa-color-rojo !important;
     background-image: url('../../../img/patterns/leaves-pattern.png') !important;
     background-image: url('../../../img/patterns/leaves.png') !important;
     background-image: url('../../../img/patterns/flowers.png') !important;
