--- a/scss/lib/cards.scss
+++ b/scss/lib/cards.scss
@@ -545,6 +545,36 @@
     right: 0px;
 }
 
+.pop-precio-2 {
+    background: #e84f4a;
+    color: #fff;
+    font-size: 14px;
+    width: 7rem;
+    box-sizing: border-box;
+    position: absolute;
+    top: 10px;
+    right: -25px;
+    padding: 5px 0px;
+    text-transform: uppercase;
+    transform: rotate(45deg);
+}
+
+.pop-precio-3 {
+    background: #e84f4a;
+    color: #fff;
+    font-size: 14px;
+    width: 9rem;
+    box-sizing: border-box;
+    position: absolute;
+    top: 15px;
+    left: -40px;
+    padding: 5px 0px;
+    text-transform: uppercase;
+    text-align: center;
+    transform: rotate(315deg);
+    letter-spacing: 1.5px;
+}
+
 @media screen and (max-width: 991px) {
     .card-flex-content {
         flex: 50%;
