--- a/scss/lib/variables.scss
+++ b/scss/lib/variables.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap');
+$ahimsa-color-rojo: #e13624;
 $ahimsa-color-verde: #008000;
 $ahimsa-color-verde-light: #00c851;
 $ahimsa-color-verde-dark: #007e33;
